--- a/app/public/home.html
+++ b/app/public/home.html
@@ -2,50 +2,16 @@
 <html>
 <head>
   <meta charset="UTF-8">
-
   <title>FriendFinder</title>
 
-  <!-- Bootstrap CSS -->
+  <!-- Bootstrap CSS, JS, jQuery, Google Fonts, Bootstrap Select, and local CSS file. -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-  <!-- Bootstrap-Select CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/css/bootstrap-select.min.css">
-
   <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-
-  <!-- Google Fonts (Open Sans) -->
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-
-  <!-- Styles CSS -->
-  <style type="text/css">
-    body {
-      font-family: 'Open Sans', sans-serif;
-      text-transform: none;
-    }
-
-    .site-footer {
-      position: relative;
-      padding-top: 40px;
-      padding-bottom: 40px;
-      margin-top: 40px;
-      line-height: 1.5;
-      color: #777;
-      border-top: 1px solid #eee;
-    }
-
-    .site-footer-links {
-      margin: 0;
-      list-style: none;
-    }
-  </style>
-
-  <!-- Bootstrap's JavaScript requires jQuery -->
+  <link rel="stylesheet" type="text/css" href="assets/homeStyles.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-
-  <!-- Bootstrap JS -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-
-  <!-- Bootstrap-Select JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/js/bootstrap-select.min.js"></script>
 </head>
 <body>
