--- a/app/public/home.html
+++ b/app/public/home.html
@@ -9,7 +9,29 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/css/bootstrap-select.min.css">
   <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="assets/css/homeStyles.css">
+
+  <style type="text/css">
+    body {
+      font-family: 'Open Sans', sans-serif;
+      text-transform: none;
+    }
+
+    .site-footer {
+      position: relative;
+      padding-top: 40px;
+      padding-bottom: 40px;
+      margin-top: 40px;
+      line-height: 1.5;
+      color: #777;
+      border-top: 1px solid #eee;
+    }
+
+    .site-footer-links {
+      margin: 0;
+      list-style: none;
+    }
+  </style>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/js/bootstrap-select.min.js"></script>
